# engiboard-desktop

./: .gitignore  CHANGELOG.md  README.md  editor.html  index.html  package.json  playwright.config.js  railway.json  scripts-sign.sh  setup.sh  sniper.html  task.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  qa_release_signoff.md
.github/workflows/: build.yml  smoke-test-windows.yml  ui-test.yml  verify-release.yml
bench/: sample.csv  seed.js
docs/: CONTRIBUTING.md  LICENSE_OPERATIONS.md  PRIVACY.md  PRODUCT_REQUIREMENTS.md  QA_DEVTOOLS_SNIPPETS.md  QA_SMOKE_5MIN.md  README.md  ROADMAP.md  SECURITY_PLAN.md  SPRINT2_PLAN.md  TERMS.md  TEST_PLAN.md  UI_TESTING.md  USER_GUIDE.md  invite.html
scripts/: mac-install.sh  qa-preview.sh  qa-reset-localstorage.md  smoke_test.py
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: license.rs  main.rs
supabase/: ARCHITECTURE_DECISION.md  README.md  seed.sql
supabase/functions/license-activate/: index.ts
supabase/functions/license-heartbeat/: index.ts
supabase/functions/send-invite/: README.md  index.ts
supabase/migrations/: 0001_initial_schema.sql  0002_rls_policies.sql  0003_storage.sql  0010_align_desktop_to_web.sql  0011_rls_policies_desktop.sql  0012_storage_screenshots.sql  0013_profile_invites_audit.sql  0014_public_task_token.sql  0015_rbac_global_roles.sql  0016_profiles_role_check_align.sql  0017_task_hidden_deadline_notes.sql  0018_task_pinned.sql  0019_licenses.sql  0020_licenses_lockdown_rpc.sql  0021_task_bug_flag.sql  0022_task_checklist_links.sql
tests/: static-server.js
tests/ui/: regression.spec.js  smoke.spec.js
