[package]
name = "engiboard"
version = "0.1.157"
description = "EngiBoard — Engineering Task Tracker"
authors = ["EngiBoard"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon", "image-png", "devtools"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cross-platform screen capture (v0.1.35) — used on Windows + Linux
# macOS keeps using native screencapture binary for better Retina handling
[target.'cfg(not(target_os = "macos"))'.dependencies]
xcap = "0.0.14"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
