[package]
name = "engiboard"
version = "0.1.179"
description = "EngiBoard — Engineering Task Tracker"
authors = ["EngiBoard"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# v0.1.159 (security Phase 1): включается локально для отладки
# (`cargo tauri dev --features dev-tools`), но в CI/release-билде
# флаг не задан, и инспектор недоступен — пиратская копия не может
# открыть DevTools и прочитать window.__TAURI__/state.
default = []
dev-tools = ["tauri/devtools"]

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# v0.1.160 (security Phase 2): license-gate dependencies.
# - keyring: хранение JWT в OS keychain (macOS Keychain / Win Credential Manager / Linux Secret Service)
# - sha2 + hex: хэш machine fingerprint (machine_id + hostname + arch)
# - hostname: чтение имени хоста кросс-OS
# - reqwest: вызов Supabase Edge Functions из Rust (минуем JS, чтобы нельзя было замокать)
# - tokio: уже неявно идёт через tauri, но нужны фичи rt для тикера heartbeat
keyring = "3"
sha2 = "0.10"
hex = "0.4"
hostname = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt", "time"] }

# Cross-platform screen capture (v0.1.35) — used on Windows + Linux
# macOS keeps using native screencapture binary for better Retina handling
[target.'cfg(not(target_os = "macos"))'.dependencies]
xcap = "0.0.14"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
